# CCF

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md
docker/: app_dev
include/ccf/: ccf_assert.h  http_configuration.h  serdes.h
include/ccf/crypto/: curve.h  entropy.h  hash_provider.h  hkdf.h  hmac.h  key_pair.h  key_wrap.h  md_type.h  pem.h  public_key.h  rsa_key_pair.h  rsa_public_key.h  san.h  sha256.h  sha256_hash.h  symmetric_key.h  verifier.h
include/ccf/ds/: enum_formatter.h  hash.h  hex.h  json.h  json_schema.h  logger.h  thread_ids.h  unit_strings.h
include/ccf/kv/: untyped_map_handle.h
include/ccf/pal/: hardware_info.h
include/ccf/service/: acme_client_config.h  node_info_network.h  signed_req.h
perf-system/: .gitignore  README.md  lskv.sh  requirements.txt
perf-system/Analyzer/: analysis.py
perf-system/Generator/: config.yaml  generator.py  requests.parquet
perf-system/Submitter/: submit.py
perf-system/analyzer/: analysis.py
perf-system/generator/: config.yaml  generate_packages.py  generator.py  loggin_generator.py  lskv_generator.py
perf-system/submitter/: CMakeLists.txt  handle_arguments.cpp  handle_arguments.hpp  output.txt  parquet_data.cpp  parquet_data.hpp  stdc++.h  stdcpp.h  submit.cpp  submit.py
perf-system/submitter/nin/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  com.txt  rules.ninja
scripts/: ci-checks.sh
src/clients/: rpc_tls_client.h  tls_client.h
src/crypto/: base64.cpp  entropy.cpp  hash.cpp  hmac.cpp  key_pair.cpp  key_wrap.cpp  rsa_key_pair.cpp  sha256_hash.cpp  symmetric_key.cpp  verifier.cpp
src/crypto/openssl/: base64.h  entropy.h  hash.cpp  hash.h  key_pair.cpp  key_pair.h  openssl_wrappers.h  public_key.cpp  public_key.h  rsa_key_pair.cpp  rsa_key_pair.h  rsa_public_key.cpp  rsa_public_key.h  symmetric_key.cpp  symmetric_key.h  verifier.cpp  verifier.h  x509_time.h
src/ds/: files.h  messaging.h  rb_map.h  ring_buffer.h  ring_buffer_types.h  serializer.h  thread_messaging.h  x509_time_fmt.h
src/enclave/: tls_endpoint.h
src/endpoints/grpc/: grpc.h
src/http/: http2_callbacks.h  http2_parser.h  http_builder.h  http_parser.h  http_proc.h  http_sig.h
src/kv/: untyped_map_handle.cpp
src/tls/: ca.h  cert.h  context.h  msg_types.h  tls.h
